--- a/learn-numpy.ipynb
+++ b/learn-numpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1672328b-ad00-4bcc-a800-6fb29173c420",
    "metadata": {
     "ExecuteTime": {
@@ -161,14 +161,14 @@
     {
      "data": {
       "text/plain": [
-       "array([[['9', '9', '9', '9'],\n",
-       "        ['9', '9', '9', '9']],\n",
+       "array([[['555', '555', '555', '555'],\n",
+       "        ['555', '555', '555', '555']],\n",
        "\n",
-       "       [['9', '9', '9', '9'],\n",
-       "        ['9', '9', '9', '9']],\n",
+       "       [['555', '555', '555', '555'],\n",
+       "        ['555', '555', '555', '555']],\n",
        "\n",
-       "       [['9', '9', '9', '9'],\n",
-       "        ['9', '9', '9', '9']]], dtype='<U1')"
+       "       [['555', '555', '555', '555'],\n",
+       "        ['555', '555', '555', '555']]], dtype='<U3')"
       ]
      },
      "execution_count": 16,
@@ -189,7 +189,7 @@
     "# The NumPy full() function in Python is used to create an array with a specified shape and fill it with a given value.\n",
     "# np.full((3,2,4),99)\n",
     "# Ex- Return array with dtype=str\n",
-    "np.full(shape=(3,2,4),fill_value='99', dtype=str)"
+    "np.full(shape=(3,2,4),fill_value='555', dtype='<U3')"
    ]
   },
   {
@@ -223,7 +223,9 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "1509810b-cb9d-4033-99ed-c4cf2ae25559",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -274,6 +276,130 @@
     "\n",
     "# a2@a1\n",
     "a1*a2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "5adea83a-0880-4187-bf1a-caff27ac358d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[42 51 60] [20 47 74] [42 51 60] [20 47 74]\n"
+     ]
+    }
+   ],
+   "source": [
+    "v = np.array([2,3,4])\n",
+    "M = np.array([[1,2,3],\n",
+    "             [4,5,6],\n",
+    "             [7,8,9]])\n",
+    "p= v@M\n",
+    "q = M@v\n",
+    "r= np.dot(v,M)\n",
+    "s= np.dot(M, v)\n",
+    "print(p, q, r,s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "aa09d8c3-8689-4d3a-be77-56168c63f9ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 5  6  7  8  9 10 11 12]\n",
+      "[ 2  4  6  8 10 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([[1 , 2, 3, 4], [5, 6, 7, 8], [9, 10, 11, 12]])\n",
+    "five_up = (arr>=5)\n",
+    "print(arr[five_up])\n",
+    "even = (arr%2==0)\n",
+    "print(a[even])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "8c37ddd9-b2d3-4c9e-93db-c4b767c5b6fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 1, 3, 3],\n",
+       "       [2, 2, 4, 4],\n",
+       "       [5, 5, 6, 6]])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a1 = np.array([[1,1],[2,2],[5,5]])\n",
+    "a2 = np.array([[3,3],[4,4],[6,6]])\n",
+    "# np.vstack((a1,a2))\n",
+    "np.hstack((a1, a2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "439f73f8-f9cc-489b-b42a-17dba2de9c42",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10, 20])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = np.array([10,20])\n",
+    "ones = np.ones(2, dtype = int)\n",
+    "ones*data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "a2543d5a-01ae-4b44-9660-1082cba008fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([12, 15, 18]), array([ 6, 15, 24]))"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ss = np.array([[1,2,3],\n",
+    "                [4,5,6],\n",
+    "                [7,8,9]])\n",
+    "sv = ss.sum( axis=0) # Use axis=0 to apply a method down each column, or to the row labels (the index).\n",
+    "sc = ss.sum(axis=1) # Use axis=1 to apply a method across each row, or to the column labels.\n",
+    "sv, sc"
    ]
   }
  ],
